--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
     />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>OneSpot</title>
   </head>
 
   <body>
